# cocorium

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  cocorium_server.db  go.mod  go.sum  main.go  run.sh
Common/include/: ErrorCodes.h  Logger.h
Common/src/: Logger.cpp
DB/data/: roles.sql  users.sql
DB/database/: audit.sql  database.sql  tables.sql  user.sql  views.sql
Launcher/: CMakeLists.txt
Launcher/src/: CocoriumLauncher.cpp  CocoriumLauncher.h  ConfigManager.cpp  ConfigManager.h  GameLibraryManager.cpp  ISection.h  SectionManager.cpp  SectionManager.h  ThemeManager.cpp  ThemeManager.h  UIManager.cpp  UIManager.h  main.cpp
Launcher/src/sections/: HomeSection.cpp  HomeSection.h  LibrarySection.cpp  LibrarySection.h  SettingsSection.cpp  SettingsSection.h
SDK/: CMakeLists.txt
SDK/include/CocoriumSDK/: Cocorium.h
SDK/src/: Cocorium.cpp
Server/: CMakeLists.txt
Server/src/: DatabaseManager.cpp  DatabaseManager.h  PostgreSQLDatabase.cpp  PostgreSQLDatabase.h  ServerConfigManager.cpp  ServerConfigManager.h  main.cpp
script/: milki.sh
scripts/: drop_db.sh  reset_db.sh  setup_db.sh
src/: CocoriumLauncher.cpp  CocoriumLauncher.h  GameLibraryManager.cpp  GameLibraryManager.h  UIManager.cpp  UIManager.h
src/auth/: auth.go
src/cache/: cache.go  recorder.go
src/common/: constants.go  error.go  error_code.go  permissions.go
src/config/: config.go  database.go  server.go
src/connection/: connection.go
src/game/: clicker.go  game.go  manager.go
src/middleware/: auth.go  cache.go  correlation.go  cors.go  permission.go
src/model/: permission.go  role.go  role_permission.go  token.go  user.go
src/server/: auth.go  game.go  server.go  user.go  validate.go
src/service/: auth.go  game.go  rbac.go  service.go  user.go
src/tracer/: logger.go
